test/end-to-end/compile-errors/local-ignored-but-mutable.crow
main void()
	_ mut nat = 0
